# CompVisionProjects

./: .gitignore
calibration_ar/: CMakeLists.txt  README.md  calibration.cpp  calibration.h  detectFeatures.cpp  displayVirtualObject.cpp  drawCorners.cpp  getCameraPosition.cpp  report_calib_data2.yml  runCalibration.cpp
content_based_image_retrieval/: CMakeLists.txt  README.md
content_based_image_retrieval/src/: CMakeLists.txt  README.md  compare_methods.cpp  distanceMetric.cpp  distanceMetric.h  featureExtractor.cpp  featureExtractor.h  find_similar_images.cpp  find_similar_images.h  get_matches.cpp  readfiles-1.cpp
demos/: CMakeLists.txt  fourierTransform.cpp
demos/histograms/: CMakeLists.txt
object_recognition/: CMakeLists.txt  README.md  classify.cpp  classify.h  compareDistanceMetrics.cpp  confusion_matrix.ipynb  image_dir_or.cpp  image_or.cpp  kmeans.cpp  kmeans.h  objectRecognition.cpp  real_time_or.cpp  runClassification.cpp  testGrassfire.cpp  thresholding.cpp  thresholding.h  utils.cpp  utils.h
recognition_dnn/: README.md  detect_hand_gestures.py  experiment_params.json  find_best_model.py  network.py  network_diagram  requirements.txt  run_digit_recognizer.py  run_on_handwritten_digits.py  test_params.json  train.py  train_digit_recognizer.py  transfer_learning.py  transfer_learning_greek.py  visualize.py  visualize_data.py  visualize_network.py  visualize_network_filters.py
video_special_effects/: CMakeLists.txt  README.md  filter.cpp  filter.h  imgDisplay.cpp  testFilter.cpp  timeBlur.cpp  vidDisplay.cpp
video_special_effects/depthAnything/da2-code/: makefile
video_special_effects/faceDetect/: faceDetect.h
